--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ data-root/
 
 # Ignore sass cache.
 .sass-cache/
+public/azure.css
 
 # Ignore the tmp/ folder, used to restart on production.
 tmp/
+log/
 
 unicorn.rb
 
