--- a/site/_config.yml
+++ b/site/_config.yml
@@ -1,59 +1,56 @@
-title:            HMFAYSAL V2
-tagline:          Life without Pants!
-description:      An awesome Jekyll theme by Engineer Hossain Mohd Faysal featuring a slide out drawer navigation for mobile browsers.
+title: azurefire
+tagline: Life without Pants!
+description: An awesome Jekyll theme by Engineer Hossain Mohd Faysal featuring a slide out drawer navigation for mobile browsers.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://v2.theevilgenius.tk
+url:
 
 # Owner/author information
 owner:
-  name:           Hossain Mohd Faysal
-  avatar:         bio-photo.jpg
-  bio:            "Hossain Mohammad Faysal is an Electrical Engineer and a Mathematician based in Doha, Qatar. His interests are anything that’s related to math, from math itself to programming languages to music to physics to engineering to philosophy."
-  email:          hmfaysal@gmail.com
+  name: Ash Wilson
+  avatar: bio-photo.jpg
+  bio: >
+    Ash Wilson is a Developer Support Engineer at Rackspace, providing support for
+    Rackspace SDKs and APIs. He's a polyglot who dabbles in programming languages
+    both hipster and mundane, but always seems to come back to Ruby.
+  email: smashwilson@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # To register at HMFAYSAL SOCIAL, visit http://social.hmfaysal.tk
-  twitter:        hmfaysal
-  facebook:       hmfaysal
-  github:         hmfaysal
-  linkedin:       
-  instagram:      
-  lastfm:         
-  tumblr:         
-  hmfaysalsocial: hmfaysal
+  twitter: smashwilson
+  facebook: kzintelepath
+  github: smashwilson
+  linkedin:
+  instagram:
+  lastfm:
+  tumblr:
+  hmfaysalsocial:
   # For Google Authorship https://plus.google.com/authorship
-  google_plus:    
+  google_plus: AshWilsonAway
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   UA-39365944-4
-google_verify:      
+google_analytics:
+google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:        
+bing_verify:
 
 # Links to include in top navigation
 # For external links add external: true
 links:
   - title: Home
     url: /
+  - title: News
+    url: /news/
   - title: About
     url: /about/
-  - title: Articles
-    url: /articles/
-  - title: Setup
-    url: /theme-setup/
-  - title: T-Details
-    url: /technical-details/
-  - title: The Evil-Genius
-    url: http://www.theevilgenius.tk/
-    external: true
+
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
-future:      true
-pygments:    true
-markdown:    kramdown
+timezone: America/New_York
+highlighter: pygments
+future: true
+markdown: kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:categories/:title
+permalink: /:categories/:title
 
 kramdown:
   auto_ids: true
@@ -61,9 +58,10 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   use_coderay: false
+  input: GFM
 
   coderay:
-    coderay_line_numbers: 
+    coderay_line_numbers:
     coderay_line_numbers_start: 1
     coderay_tab_width: 4
     coderay_bold_every: 10
