Use an actual picture of me.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url:
 # Owner/author information
 owner:
   name: Ash Wilson
-  avatar: bio-photo.jpg
+  avatar: cat-sniffer.jpg
   bio: >
     Ash Wilson is a Developer Support Engineer at Rackspace, providing support for
     Rackspace SDKs and APIs. He's a polyglot who dabbles in programming languages
