--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ owner:
   tumblr:
   hmfaysalsocial:
   # For Google Authorship https://plus.google.com/authorship
-  google_plus: AshWilsonAway
+  google_plus: https://plus.google.com/u/0/+AshWilsonAway/
 
 # Analytics and webmaster tools stuff goes here
 google_analytics:
