Narcissistic "about me" stuff.

--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@ owner:
   name: Ash Wilson
   avatar: cat-sniffer.jpg
   bio: >
-    Ash Wilson is a Developer Support Engineer at Rackspace, providing support for
-    Rackspace SDKs and APIs. He's a polyglot who dabbles in programming languages
-    both hipster and mundane, but always seems to come back to Ruby.
+    Ash Wilson is a Developer Support Engineer at Rackspace.
   email: smashwilson@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # To register at HMFAYSAL SOCIAL, visit http://social.hmfaysal.tk
