More bio tweaks.

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ owner:
   name: Ash Wilson
   avatar: cat-sniffer.jpg
   bio: >
-    Ash Wilson is a Developer Support Engineer at Rackspace.
+    Ash Wilson is a Developer Support Engineer at Rackspace, a Ruby hacker, and a Dad.
   email: smashwilson@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # To register at HMFAYSAL SOCIAL, visit http://social.hmfaysal.tk
