--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: azurefire
 tagline: Life without Pants!
 description: An awesome Jekyll theme by Engineer Hossain Mohd Faysal featuring a slide out drawer navigation for mobile browsers.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:
+url: https://azurefire.net
 
 # Owner/author information
 owner:
