--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: azurefire
 tagline: Life without Pants!
+logo: default-thumb.png
 description: An awesome Jekyll theme by Engineer Hossain Mohd Faysal featuring a slide out drawer navigation for mobile browsers.
+
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url: https://azurefire.net
 
