--- a/_config.yml
+++ b/_config.yml
@@ -71,3 +71,8 @@ kramdown:
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
+
+assets:
+  cache: true
+  js_compressor: uglifier
+  css_compressor: sass
