Move fonts into _assets too.
That should be the last of it.

--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,12 @@ include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
 
 assets:
+  sources:
+  - _assets/javascripts
+  - _assets/stylesheets
+  - _assets/images
+  - _assets/fonts
   cache: true
+  gzip: false
   js_compressor: uglifier
   css_compressor: sass
