--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ owner:
   google_plus: https://plus.google.com/u/0/+AshWilsonAway/
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:
+google_analytics: UA-54367335-1
 google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
