Fuss with global settings.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: azurefire
-tagline: Life without Pants!
+tagline: Setting the cloud on fire
 logo: default-thumb.png
-description: An awesome Jekyll theme by Engineer Hossain Mohd Faysal featuring a slide out drawer navigation for mobile browsers.
+description: A place to stash whatever pops into my head, mostly about software.
 
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url: https://azurefire.net
